remove v1 webrtc api
