# docs/swagger.yaml
@@ -1348,19 +1348,10 @@ paths:
       tags:
         - webrtc
       operationId: getChannelWebRTCState
-      description: チャンネルのWebRTC状態を取得します。
-      security:
-        - traqOAuth2:
-            - read
+      description: このAPIは削除されました
       responses:
-        '200':
-          description: 正常に取得できました。
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WebRTCChannelState'
-        '404':
-          description: 取得できませんでした。指定したチャンネルは存在しません。
+        '410':
+          description: このAPIは削除されました
   /notification:
     get:
       deprecated: true
@@ -1580,10 +1571,10 @@ paths:
       tags:
         - file
       operationId: uploadFile
-      description: このAPIは削除されました。
+      description: このAPIは削除されました
       responses:
         '410':
-          description: このAPIは廃止されました。
+          description: このAPIは削除されました
   '/files/{fileID}':
     parameters:
       - $ref: '#/components/parameters/fileIdInPath'
@@ -2687,35 +2678,19 @@ paths:
       tags:
         - webrtc
       operationId: getWebRTCState
-      description: 自身のWebRTCの状態を取得します。
-      security:
-        - traqOAuth2:
-            - read
+      description: このAPIは削除されました
       responses:
-        '200':
-          description: 正常に取得できました。
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WebRTCUserState'
+        '410':
+          description: このAPIは削除されました
     put:
       deprecated: true
       tags:
         - webrtc
       operationId: putWebRTCState
-      description: 自身のWebRTCの状態を変更します。
-      security:
-        - traqOAuth2:
-            - write
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PutWebRTCState'
+      description: このAPIは削除されました
       responses:
-        '204':
-          description: 正常に変更できました。
+        '410':
+          description: このAPIは削除されました
 components:
   securitySchemes:
     cookieAuth:
